chart layout created

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,5 @@
     your device.\n
     6. I will not share the information with anybody else.
     ]]></string>
+    <string name="chart">chart</string>
 </resources>
